--- a/Multireactor_Rate_Processing.Rmd
+++ b/Multireactor_Rate_Processing.Rmd
@@ -43,10 +43,11 @@ rm(list=ls());graphics.off()
 #Example:
 pnnl.user = 'laan208'
 
-input.path = paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/Raw_DO_by_Min/EC_INC_Raw_DO_By_Min_ReadyForBoye_2024-07-29.csv")
+input.path = "C:/GitHub/Cincinnati_Multireactor_Respiration/Data/RS_INC_Raw_DO_By_Min_ReadyForBoye_2024-08-28.csv"
 
 
-output.path = paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/")
+output.path = "C:/GitHub/Cincinnati_Multireactor_Respiration/Data/"
+
 
 data = read.csv(input.path)
 
@@ -125,26 +126,20 @@ samples = data %>%
 respiration <- as.data.frame(matrix(NA, ncol = 17, nrow =1))
 
 colnames(respiration) = c("Sample_Name","slope_of_the_regression", "rate_mg_per_L_per_min", "rate_mg_per_L_per_h", "R_squared", "R_squared_adj",  "p_value", "total_incubation_time_min", "number_of_points", "no_points_rem",  "breusch_p_value","break_point", "slope_ratio",  "0_min_concentration", "2_min_concentration", "last_concentration", "theoretical")
-
-location = c("-W1", "-W2", "-W3","-W4", "-W5","-D1", "-D2", "-D3", "-D4", "-D5")
-
-for (i in 1:length(location)){
-  
-  ## Subset by replicate
-  
-  data_location_subset = samples[grep(location[i],samples$Sample_Name),]
-  
-  unique.incubations = unique(data_location_subset$Sample_Name)
-  
-  rate = as.data.frame(matrix(NA, ncol = 14, nrow = length(unique(samples$Sample_Name))))
+rate = as.data.frame(matrix(NA, ncol = 14, nrow = length(unique(samples$Sample_Name))))
   
   colnames(rate) = c("Sample_Name", "slope_of_the_regression", "rate_mg_per_L_per_min", "rate_mg_per_L_per_h", "R_squared", "R_squared_adj", "p_value", "total_incubation_time_min", "breusch_p_value", "slope_ratio", "0_min_concentration", "2_min_concentration", "last_concentration", "theoretical")
-  
+
+#location = c("-W1", "-W2", "-W3","-W4", "-W5","-D1", "-D2", "-D3", "-D4", "-D5")
+
+unique.incubations = unique(samples$Sample_Name)
+
   for (j in 1:length(unique.incubations)){
+    
     
     # Subset by individual sites
     
-    data_site_subset = subset(data_location_subset, data_location_subset$Sample_Name == unique.incubations[j])
+    data_site_subset = subset(samples, samples$Sample_Name == unique.incubations[j])
     
     # Put in ascending order for minutes
     data_site_subset = data_site_subset[order(data_site_subset$Elapsed_Minute, decreasing = FALSE),]
@@ -509,7 +504,7 @@ for (i in 1:length(location)){
       multi <- (final + break_rem + clean + all) +
         plot_layout(widths = c(2,2))
       
-      ggsave(file=paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/Plots/",data_site_subset$Sample_Name[1],".pdf"), width = 7, height = 7, units = "in")
+      ggsave(file=paste0("C:/GitHub/Cincinnati_Multireactor_Respiration/Data/Plots/",data_site_subset$Sample_Name[1],".pdf"), width = 7, height = 7, units = "in")
       
     }
    
@@ -550,7 +545,6 @@ for (i in 1:length(location)){
   rate = rate[!is.na(rate$Sample_Name),]   
   # Combining the regression metrics across locations and unique incubations
   respiration = rbind(respiration,rate)
-}
 
 respiration = respiration[-1,]
 
@@ -564,11 +558,11 @@ respiration = respiration[-1,]
 ```{r Boye Format for Respiration Rates}
 
 ## Pull in solid:solution ratio data for mg/kg calculations
-solid <- read.csv(paste0("Z:/00_Cross-SFA_ESSDIVE-Data-Package-Upload/01_Study-Data-Package-Folders/ECA_Data_Package/EC_Data_Package/Sample_Data/EC_Sediment_Gravimetric_Moisture.csv"), skip = 2) %>% 
-  filter(grepl("EC", Sample_Name))
+solid <- read.csv("C:/GitHub/Cincinnati_Multireactor_Respiration/Data/RS_Drying_Masses_ReadyForBoye_on_2024-08-28.csv") %>% 
+  rename(Sample_Name = Sample_ID)
 
 ## Pull in SpC, Temp, pH for these samples
-chem <- read.csv(paste0("C:/Users/",pnnl.user,"/PNNL/Core Richland and Sequim Lab-Field Team - Documents/Data Generation and Files/ECA/Optode multi reactor/Optode_multi_reactor_incubation/SpC_pH_Temp_Processed_Data/EC_SpC_pH_Temp_ReadyForBoye_10-03-2023.csv"))
+chem <- read.csv("C:/Users/laan208/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/Cincinnati_RS/Optodes/Rate_Processing/RS_SpC_pH_Temp_ReadyForBoye_2024-08-28.csv")
 
 ## Pull out Method Deviations from Raw Data, removing RATE_004
 removed <- data %>% 
@@ -593,9 +587,10 @@ lod_flag = samples %>%
 ## Get respiration data in Boye format
 boye <- all.samples %>% 
   left_join(solid, by = "Sample_Name") %>%
-  rename(Methods_Deviation_do = Methods_Deviation.x) %>% 
-  rename(Methods_Deviation_solid = Methods_Deviation.y) %>% # Join solid:solution ratio 
+  rename(Methods_Deviation_do = Methods_Deviation.x) %>%
+  rename(Methods_Deviation_solid = Methods_Deviation.y) %>% 
   left_join(chem, by = "Sample_Name") %>% 
+  rename(Methods_Deviation_chem = Methods_Deviation) %>% 
   left_join(lod_flag, by = "Sample_Name") %>% 
   mutate(rate_mg_per_L_per_h = if_else(slope_of_the_regression>=0,0,rate_mg_per_L_per_h)) %>% #make positive slopes 0
   mutate(rate_mg_per_L_per_h = if_else(is.na(rate_mg_per_L_per_h), 9999, rate_mg_per_L_per_h)) %>%
@@ -611,26 +606,15 @@ boye <- all.samples %>%
   mutate(Number_Points_In_Respiration_Regression = if_else(is.na(number_of_points), as.numeric(-9999), if_else(number_of_points == 2, -9999, as.numeric(number_of_points)))) %>% 
   mutate(Number_Points_Removed_Respiration_Regression = if_else(is.na(no_points_rem), -9999, if_else(grepl("RATE_005", Methods_Deviation.theoretical), -9999, no_points_rem))) %>% 
   mutate(`2_min_concentration` = if_else(is.na(`2_min_concentration`), -9999, `2_min_concentration`)) %>%
-   mutate(DO_Concentration_At_Incubation_Time_Zero = if_else(grepl("LOD", DO_mg_per_L_flag), DO_mg_per_L_flag, as.character(`2_min_concentration`))) %>% 
-  mutate(Methods_Deviation = if_else(is.na(Methods_Deviation.theoretical), Methods_Deviation, paste(Methods_Deviation, Methods_Deviation.theoretical, sep = "; "))) %>% 
+  mutate(Methods_Deviation = if_else(is.na(Methods_Deviation.theoretical), Methods_Deviation_do, paste(Methods_Deviation_do, Methods_Deviation.theoretical, sep = "; "))) %>% 
   mutate_all(~gsub("N/A; |N/A ; ", "",.)) %>%
   mutate(Methods_Deviation = if_else(grepl("RATE_003", Methods_Deviation), "N/A", Methods_Deviation)) %>% 
-  dplyr::select(c(Sample_Name, Material.x, SpC, pH, Temp, Respiration_Rate_mg_DO_per_L_per_H, Respiration_Rate_mg_DO_per_kg_per_H, Respiration_R_Squared, Respiration_R_Squared_Adj, Respiration_p_Value, Total_Incubation_Time_Min, Number_Points_In_Respiration_Regression, Number_Points_Removed_Respiration_Regression, DO_Concentration_At_Incubation_Time_Zero, Methods_Deviation_do, Methods_Deviation_solid, Methods_Deviation))
+  dplyr::select(c(Sample_Name, Material, SpC, pH, Temp, Respiration_Rate_mg_DO_per_L_per_H, Respiration_Rate_mg_DO_per_kg_per_H, Respiration_R_Squared, Respiration_R_Squared_Adj, Respiration_p_Value, Total_Incubation_Time_Min, Number_Points_In_Respiration_Regression, Number_Points_Removed_Respiration_Regression,  Methods_Deviation))
 
-boye_dev <- boye %>% 
-  mutate(Methods_Deviation_solid = if_else(Methods_Deviation_solid == "INC_QA_005", "N/A", if_else(grepl("; INC_QA_005", Methods_Deviation_solid), str_replace(Methods_Deviation_solid, "; INC_QA_005", ""), Methods_Deviation_solid))) %>% 
-  mutate(Methods_Deviation_solid = if_else(Methods_Deviation_solid == "INC_008", "N/A", if_else(grepl("; INC_008", Methods_Deviation_solid), str_replace(Methods_Deviation_solid, "; INC_008", ""), Methods_Deviation_solid))) %>% 
-  mutate(Methods_Deviation_do = if_else(Methods_Deviation_do == "INC_008", "N/A", if_else(grepl("; INC_008", Methods_Deviation_do), str_replace(Methods_Deviation_do, "; INC_008", ""), Methods_Deviation_do))) %>% 
-  mutate(Methods_Deviation_com = if_else(Methods_Deviation_solid == Methods_Deviation_do, Methods_Deviation_do, if_else(Methods_Deviation_solid == "N/A", Methods_Deviation_do, if_else(Methods_Deviation_do == "N/A", Methods_Deviation_solid, paste0(Methods_Deviation_do, "; ", Methods_Deviation_solid))))) %>% 
-  mutate(Methods_Deviation_com = if_else(Methods_Deviation_com == "VI_ALL_006", "N/A", if_else(Methods_Deviation_com == "INC_005", "N/A", Methods_Deviation_com))) %>% 
-  mutate(Methods_Deviation = if_else(Methods_Deviation_com == "N/A", Methods_Deviation, if_else(Methods_Deviation == "N/A", Methods_Deviation_com, if_else(Methods_Deviation == Methods_Deviation_com, Methods_Deviation, if_else(grepl(Methods_Deviation, Methods_Deviation_com), Methods_Deviation,  paste0(Methods_Deviation_com, "; ", Methods_Deviation)))))) %>% 
-  dplyr::select(-c(Methods_Deviation_solid, Methods_Deviation_do, Methods_Deviation_com)) %>% 
-rename(Material = Material.x)
 
 output.path = paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/")
   
-
-write.csv(boye_dev, paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/EC_Sediment_Incubations_Respiration_Rates_ReadyForBoye_",Sys.Date(),".csv"), row.names = F)
+write.csv(boye, paste0("C:/GitHub/Cincinnati_Multireactor_Respiration/Data/RS_Sediment_Incubations_Respiration_Rates_ReadyForBoye_",Sys.Date(),".csv"), row.names = F)
 
 ```
 ## Remove Outlier Samples 
