--- a/Multireactor_Rate_Processing.Rmd
+++ b/Multireactor_Rate_Processing.Rmd
@@ -434,9 +434,10 @@ unique.incubations = unique(samples$Sample_Name)
     #Make Plots for the following fits: Final Data, Break Point Data, Cleaned Data, Original Data
     
     if (plot.toggle == TRUE) {
-      final <- ggplot(data_site_subset_fin, aes(x = Elapsed_Minute, y = DO_mg_per_L)) + coord_cartesian(ylim = c(0,15))+ geom_point(size = 2) + expand_limits(x = 0, y = 0) +
+      final <- ggplot(data_site_subset_fin, aes(x = Elapsed_Minute, y = DO_mg_per_L)) + coord_cartesian(ylim = c(min(data_site_subset_fin$DO_mg_per_L)-1,max(data_site_subset_fin$DO_mg_per_L)+1))+ 
+        geom_point(size = 2) + #expand_limits(x = 0, y = 0) +
         geom_smooth(method = "lm", se=F, formula = my.formula) +
-        geom_label(aes(x = 0, y = 13), size = 2.5, hjust = 0,
+        geom_label(aes(x = 60, y = max(DO_mg_per_L + 0.5)), size = 2.5, hjust = 0,
                    label = paste("R2 = ", signif(summary(fit)$r.squared, 3),
                                  "\nP = ", signif(summary(fit)$coefficients[[4]], 3),
                                  "\nSlope = ", signif(fit$coefficients[[2]], 3)))+      theme_bw()+theme(legend.title = element_blank(),legend.background = element_rect(fill = 'NA'), legend.text = element_text(size = 12,face="bold"))+
@@ -452,7 +453,7 @@ unique.incubations = unique(samples$Sample_Name)
       
       clean <- ggplot(data_site_subset_beg, aes(x = Elapsed_Minute, y = DO_mg_per_L)) + coord_cartesian(ylim = c(0,15))+ geom_point(size = 2) + expand_limits(x = 0, y = 0) +
         geom_smooth(method = "lm", se=F, formula = my.formula) +
-        geom_label(aes(x = 0, y = 13), size = 2.5, hjust = 0,
+        geom_label(aes(x = 90, y = 10), size = 2.5, hjust = 0,
                    label = paste("R2 = ", signif(summary(fitog)$r.squared, 3),
                                  "\nP = ", signif(summary(fitog)$coefficients[[4]], 3),
                                  "\nSlope = ", signif(fitog$coefficients[[2]], 3)))+
@@ -752,6 +753,22 @@ eca_respiration_all_final = outliers_flag %>%
   mutate(Methods_Deviation = str_replace(Methods_Deviation, "; NA", "")) %>% 
   mutate(Methods_Deviation)
   
+hist = ggplot(boye, aes(x = abs(as.numeric(Respiration_Rate_mg_DO_per_kg_per_H)))) +
+  geom_histogram()
 
+eca = read.csv("C:/GitHub/ECA_Multireactor_Incubations/Data/EC_Sediment_SpC_pH_Temp_Respiration.csv", skip = 2) %>% 
+  filter(grepl("EC", Sample_Name)) %>% 
+  filter(Respiration_Rate_mg_DO_per_kg_per_H != "-9999") %>% 
+  mutate(Respiration_Rate_mg_DO_per_kg_per_H = as.numeric(Respiration_Rate_mg_DO_per_kg_per_H)) %>% 
+  filter(Respiration_Rate_mg_DO_per_kg_per_H > -200)
+
+eca_hist = ggplot(eca, aes(x = abs(as.numeric(Respiration_Rate_mg_DO_per_kg_per_H)))) +
+  geom_histogram()
+
+combine_hist = ggplot() +
+  geom_histogram(eca,binwidth = 1, mapping = aes(x = abs(as.numeric(Respiration_Rate_mg_DO_per_kg_per_H)))) +
+  geom_histogram(boye, binwidth = 1, fill = "red", mapping = aes(x = abs(as.numeric(Respiration_Rate_mg_DO_per_kg_per_H))))
+  
+  
 
 ```
