--- a/Multireactor_Rate_Processing.Rmd
+++ b/Multireactor_Rate_Processing.Rmd
@@ -79,9 +79,6 @@ data = read.csv(input.path)
   + 0.1 middle of selection, no large differences in histograms
   + Tested range: 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, No removals
 
-* High Slope Threshold (high.slope.thresh) = -0.04
-  + Remove saturation point if slope is pretty flat     but starts low (might be able to remove)
-
 * Time Same (time.same) = 7
   + Keep 2 minute DO value even if it was put on the rollers at the same time a photo was taken if it is lower than this value
   
@@ -98,17 +95,16 @@ data = read.csv(input.path)
 ```{r Set Parameters}
 
 min.points = 2
-slope.thresh = -0.006
+slope.thresh = 0 # in eca = -0.006
 do.thresh = 2
 high.do = 14
 time.thresh = 4
-fast = 5.5 
+fast = 5.5 #not applicable here
 bpfit = 0.1
-high.slope.thresh = -0.04 
 time.same = 7
-break.toggle = 1.4
-conc.range = 1.4
-plot.toggle = FALSE
+break.toggle = 1
+conc.range = 0
+plot.toggle = TRUE
 
 ```
 ## Fit a linear model to data with chosen rules
@@ -437,7 +433,7 @@ unique.incubations = unique(samples$Sample_Name)
       final <- ggplot(data_site_subset_fin, aes(x = Elapsed_Minute, y = DO_mg_per_L)) + coord_cartesian(ylim = c(min(data_site_subset_fin$DO_mg_per_L)-1,max(data_site_subset_fin$DO_mg_per_L)+1))+ 
         geom_point(size = 2) + #expand_limits(x = 0, y = 0) +
         geom_smooth(method = "lm", se=F, formula = my.formula) +
-        geom_label(aes(x = 60, y = max(DO_mg_per_L + 0.5)), size = 2.5, hjust = 0,
+        geom_label(aes(x = 0, y = max(DO_mg_per_L + 0.5)), size = 2.5, hjust = 0,
                    label = paste("R2 = ", signif(summary(fit)$r.squared, 3),
                                  "\nP = ", signif(summary(fit)$coefficients[[4]], 3),
                                  "\nSlope = ", signif(fit$coefficients[[2]], 3)))+      theme_bw()+theme(legend.title = element_blank(),legend.background = element_rect(fill = 'NA'), legend.text = element_text(size = 12,face="bold"))+
@@ -669,8 +665,6 @@ unique.incubations = unique(data$Sample_Name)
          y = "DO mg/L") +
     theme_minimal()
     
-    hmr
-    
     lin = ggplot(data_site_subset_fit, aes(x = log(DO_mg_per_L), y =t)) + 
       geom_point()
 
@@ -872,6 +866,12 @@ respiration = respiration[!is.na(respiration$Sample_Name),]
 respiration$AIC_Diff = round(respiration$linear_AIC - respiration$non_linear_AIC, 3)
 
 write.csv(respiration, paste0(output.path,"Combined_Fits_RS_Sediment_Incubations_Respiration_Rates_",Sys.Date(),".csv"), row.names = F)
+
+
+```
+
+```{r HMR?}
+
 
 
 ```
