--- a/Scripts/Multireactor_Rate_Processing.Rmd
+++ b/Scripts/Multireactor_Rate_Processing.Rmd
@@ -102,9 +102,9 @@ time.thresh = 4
 fast = 5.5 #not applicable here
 bpfit = 0.1
 time.same = 7
-break.toggle = 1
-conc.range = 0
-plot.toggle = TRUE
+break.toggle = 1 #in eca 1.4
+conc.range = 0 #in eca 1.4
+plot.toggle = FALSE
 
 ```
 ## Fit a linear model to data with chosen rules
@@ -125,8 +125,6 @@ colnames(respiration) = c("Sample_Name","slope_of_the_regression", "rate_mg_per_
 rate = as.data.frame(matrix(NA, ncol = 14, nrow = length(unique(samples$Sample_Name))))
   
   colnames(rate) = c("Sample_Name", "slope_of_the_regression", "rate_mg_per_L_per_min", "rate_mg_per_L_per_h", "R_squared", "R_squared_adj", "p_value", "total_incubation_time_min", "breusch_p_value", "slope_ratio", "0_min_concentration", "2_min_concentration", "last_concentration", "theoretical")
-
-#location = c("-W1", "-W2", "-W3","-W4", "-W5","-D1", "-D2", "-D3", "-D4", "-D5")
 
 unique.incubations = unique(samples$Sample_Name)
 
@@ -545,7 +543,6 @@ unique.incubations = unique(samples$Sample_Name)
 
 respiration = respiration[-1,]
 
-
 #write.csv(respiration,paste0(output.path,"Half_LOD_ECA_Sediment_Incubations_Respiration_Rates_",Sys.Date(),".csv"), row.names = F)
 
 ```
@@ -589,9 +586,9 @@ boye <- all.samples %>%
   left_join(chem, by = "Sample_Name") %>% 
   rename(Methods_Deviation_chem = Methods_Deviation) %>% 
   left_join(lod_flag, by = "Sample_Name") %>% 
-  mutate(rate_mg_per_L_per_h = if_else(slope_of_the_regression>=0,0,rate_mg_per_L_per_h)) %>% #make positive slopes 0
-  mutate(rate_mg_per_L_per_h = if_else(is.na(rate_mg_per_L_per_h), 9999, rate_mg_per_L_per_h)) %>%
-  mutate(Respiration_Rate_mg_DO_per_L_per_H = rate_mg_per_L_per_h * -1) %>% # make rates positice 
+ # mutate(rate_mg_per_L_per_h = if_else(slope_of_the_regression>=0,0,rate_mg_per_L_per_h)) %>% #make positive slopes 0
+  #mutate(rate_mg_per_L_per_h = if_else(is.na(rate_mg_per_L_per_h), 9999, rate_mg_per_L_per_h)) %>%
+  mutate(Respiration_Rate_mg_DO_per_L_per_H = slope_of_the_regression*60) %>% # make rates positice 
   mutate(Respiration_Rate_mg_DO_per_kg_per_H = if_else(Respiration_Rate_mg_DO_per_L_per_H > -9999, Respiration_Rate_mg_DO_per_L_per_H * (as.numeric(Incubation_Water_Mass_g)/as.numeric(Dry_Sediment_Mass_g)), -9999)) %>% # calculate mg DO/kg dry sediment values
   mutate(Respiration_Rate_mg_DO_per_kg_per_H = if_else(Incubation_Water_Mass_g == -9999, -9999, Respiration_Rate_mg_DO_per_kg_per_H)) %>% 
   mutate(Respiration_Rate_mg_DO_per_kg_per_H = round(Respiration_Rate_mg_DO_per_kg_per_H, 3)) %>% 
@@ -608,6 +605,15 @@ boye <- all.samples %>%
   mutate(Methods_Deviation = if_else(grepl("RATE_003", Methods_Deviation), "N/A", Methods_Deviation)) %>% 
   dplyr::select(c(Sample_Name, Material, SpC, pH, Temp, Respiration_Rate_mg_DO_per_L_per_H, Respiration_Rate_mg_DO_per_kg_per_H, Respiration_R_Squared, Respiration_R_Squared_Adj, Respiration_p_Value, Total_Incubation_Time_Min, Number_Points_In_Respiration_Regression, Number_Points_Removed_Respiration_Regression,  Methods_Deviation))
 
+boye %>% 
+  mutate(Material = if_else(grepl("R0", Sample_Name), "Sediment", "Soil")) %>% 
+  #filter(as.numeric(Respiration_Rate_mg_DO_per_kg_per_H) >-25) %>% 
+ggplot(aes(x = as.numeric(Respiration_Rate_mg_DO_per_kg_per_H), fill = Material)) + 
+  geom_histogram() + 
+  scale_fill_manual(values = c("Soil" = "#0072B2", "Sediment" = "#D55E00")) +
+  theme_bw()+
+  xlab(bquote("Respiration Rate (mg DO * kg"^ -1 *" * H" ^-1*")")) + 
+  theme(axis.title.x = element_text(size = 15))
 
 output.path = paste0("C:/Users/",pnnl.user,"/OneDrive - PNNL/Shared Documents - Core Richland and Sequim Lab-Field Team/Data Generation and Files/ECA/INC/03_ProcessedData/")
   
@@ -621,17 +627,17 @@ non_linear_fit <- as.data.frame(matrix(NA, ncol = 7, nrow =1))
 
 colnames(non_linear_fit) = c("Sample_Name","b", "DO_mg_per_L_max", "p_value_a", "p_value_b", "total_incubation_time_min", "R_Squared")
 
-unique.incubations = unique(data$Sample_Name)
+unique.incubations = unique(samples$Sample_Name)
 
   for (j in 1:length(unique.incubations)){
     
-    rate = as.data.frame(matrix(NA, ncol = 7, nrow = length(unique(data$Sample_Name))))
+    rate = as.data.frame(matrix(NA, ncol = 7, nrow = length(unique(samples$Sample_Name))))
   
   colnames(rate) = c("Sample_Name","b", "DO_mg_per_L_max", "p_value_a", "p_value_b", "total_incubation_time_min", "R_Squared")
     
     # Subset by individual sites
     
-    data_site_subset = subset(data, data$Sample_Name == unique.incubations[i])
+    data_site_subset = subset(samples, samples$Sample_Name == unique.incubations[j])
     
     # Put in ascending order for minutes
     data_site_subset = data_site_subset[order(data_site_subset$Elapsed_Minute, decreasing = FALSE),]
@@ -678,7 +684,7 @@ unique.incubations = unique(data$Sample_Name)
     
     rate$total_incubation_time_min[j] = as.numeric(tail(data_site_subset_fit$Elapsed_Minute, n = 1) - head(data_site_subset_fit$Elapsed_Minute, n = 1)) 
     
-    rate$R_Squared[j] = R_Squared
+    #rate$R_Squared[j] = R_Squared
     
     
   rate = rate[!is.na(rate$Sample_Name),]   
@@ -689,18 +695,28 @@ unique.incubations = unique(data$Sample_Name)
 
 non_linear_fit = non_linear_fit[-1,]
 
-setwd("C:/GitHub/Cincinnati_Multireactor_Respiration/Data/Plots/Non_Linear_Fits/")
 
-#ex_pdf = list.files(path = "C:/GitHub/Cincinnati_Multireactor_Respiration/Data/Plots/Non_Linear_Fits/", pattern = "pdf")
+plot_df = non_linear_fit %>% 
+  mutate(Material = if_else(grepl("R0", Sample_Name), "Sediment", "Soil")) %>% 
+  mutate(b_hour = b *60)
 
-ex_pdf = list.files(pattern = "pdf")
+ggplot(plot_df, aes(x = (b), fill = Material)) + 
+  geom_histogram() + 
+  scale_fill_manual(values = c("Soil" = "#0072B2", "Sediment" = "#D55E00")) +
+  theme_bw()+
+  xlab(bquote("b (hour"^-1 *")")) + 
+  theme(axis.title.x = element_text(size = 15))
 
-
-
-pdf_combine(ex_pdf, output = "C:/GitHub/Cincinnati_Multireactor_Respiration/Data/Plots/Non_Linear_Fits/RS_All_Non_Linear_Fits.pdf")
 
 
 ```
+```{r compare linear vs. non linear}
+
+
+
+```
+
+
 ```{r Combine Linear and Non-Linear fits}
 # Make Data Frames
 
@@ -819,7 +835,7 @@ for (j in 1:length(unique.incubations)){
    
     coef_vals = coef(fit_non_linear)
     
-    rate$b[1] = round(as.numeric((coef_vals[2])), 3)
+    rate$b[1] = round(as.numeric((coef_vals[2])), 5)
     
     rate$p_value_a[1] = summary(fit_non_linear)$coefficients[7]
     
@@ -865,6 +881,11 @@ respiration = respiration[!is.na(respiration$Sample_Name),]
 
 respiration$AIC_Diff = round(respiration$linear_AIC - respiration$non_linear_AIC, 3)
 
+ggplot(respiration, aes(x = b)) +
+  geom_histogram()+ 
+  theme_bw()
+
+
 write.csv(respiration, paste0(output.path,"Combined_Fits_RS_Sediment_Incubations_Respiration_Rates_",Sys.Date(),".csv"), row.names = F)
 
 
@@ -872,6 +893,74 @@ write.csv(respiration, paste0(output.path,"Combined_Fits_RS_Sediment_Incubations
 
 ```{r HMR?}
 
+hmr = read.csv("C:/GitHub/Cincinnati_Multireactor_Respiration/Data/HMR - RS_INC_Raw_DO_By_Min_HMR.csv") %>% 
+  rename(Sample_Name = Series)
+
+ggplot(hmr, aes(x = f0, fill = Method)) + 
+  geom_histogram()+ 
+  theme_bw() +
+  xlab("Flux (mg O2/L/hr)") + 
+  theme(axis.title.x = element_text(size = 15))
+
+com = left_join(plot_df, boye, by = "Sample_Name") %>% 
+  mutate(Respiration_Rate_mg_DO_per_kg_per_H = as.numeric(Respiration_Rate_mg_DO_per_kg_per_H))
+
+
+com = com %>% left_join(hmr, by = "Sample_Name")
+
+com %>% 
+  filter(Respiration_Rate_mg_DO_per_kg_per_H > -50) %>% 
+ggplot(aes(x = Respiration_Rate_mg_DO_per_kg_per_H, y = b_hour, color = Material.x)) + 
+  geom_point() + 
+  ylab(bquote("b (hour"^-1 *")")) + 
+  guides(color = guide_legend("Material"))+
+  theme_bw()
+
+com %>% 
+  filter(Respiration_Rate_mg_DO_per_kg_per_H > -50) %>% 
+  filter(f0 >-100) %>% 
+ggplot(aes(x = Respiration_Rate_mg_DO_per_kg_per_H, y = f0)) + 
+  geom_point(aes(color = Material.x))+ 
+  guides(color = guide_legend("Material"))+
+  theme_bw()
+
+ggplot(com, aes(y = b_hour, x = f0)) + 
+  geom_point(aes(color = Material.x))+ 
+  ylab(bquote("b (hour"^-1 *")")) + 
+  guides(color = guide_legend("Material"))+
+  theme_bw()
+
+size = read_xlsx("C:/GitHub/Cincinnati_Multireactor_Respiration/Data/Particle_Size_Mapping.xlsx", col_names = c("Sample_Name", "Particle_Size"))
+
+com = com %>% 
+  left_join(size, by = "Sample_Name")
+
+ggplot(com, aes (x = Respiration_Rate_mg_DO_per_kg_per_H)) + 
+  geom_histogram(aes(fill = Particle_Size)) + 
+  theme_bw()
+
+```
+```{r comparison to ECA Coarse Sand}
+
+eca_rates = read.csv("C:/GitHub/ECA_Multireactor_Incubations/Data/EC_Sediment_SpC_pH_Temp_Respiration.csv", skip = 2) %>% 
+  filter(grepl("EC", Sample_Name)) %>% 
+  separate(Sample_Name, c("Sample_Name", "Rep"), sep = "_INC") %>% 
+  dplyr::select(c(Sample_Name, Respiration_Rate_mg_DO_per_kg_per_H))
+  
+
+eca_d50= read.csv("C:/GitHub/ECA_Multireactor_Incubations/Data/D50_Calculations.csv") %>% 
+  filter(d50 > 0.5) %>% 
+  mutate(Sample_Name = str_replace(Sample_Name, "_all", ""))
+
+coarse_eca = right_join(eca_rates, eca_d50, by = "Sample_Name") %>% 
+  filter(Respiration_Rate_mg_DO_per_kg_per_H != -9999) %>% 
+  mutate(Respiration_Rate_mg_DO_per_kg_per_H = as.numeric(Respiration_Rate_mg_DO_per_kg_per_H))
+
+ggplot() +
+    geom_density(com, mapping = aes(x = Respiration_Rate_mg_DO_per_kg_per_H, fill = "Cincinnati")) + 
+  geom_density(coarse_eca, mapping = aes(x = Respiration_Rate_mg_DO_per_kg_per_H, fill = "CONUS"), alpha = 0.5) + 
+  theme_bw() + 
+  xlim(-150, 5)
 
 
 ```
